support links misalign issue

--- a/hearth/media/css/infobox.styl
+++ b/hearth/media/css/infobox.styl
@@ -67,6 +67,9 @@
                 margin: 0;
                 width: 25%;
                 padding: 5px;
+                &:nth-child(2n) {
+                    padding: 5px;
+                }
             }
         }
         &.overflowing {
